[package]
name = "rail-lang"
version = "0.30.2"
authors = ["J.R. Hill <justin@so.dang.cool>"]
description = "A straightforward programming language. Rail is currently experimental and subject to drastic breaking changes."
license = "GPL-2.0-only"

readme = "README.md"
homepage = "https://github.com/booniepepper/rail"
repository = "https://github.com/booniepepper/rail"
#documentation = "TODO"
keywords = ["programming-language", "concatenative", "interpreter", "parser"]
categories = []

edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.1", features = [ "derive" ] }
clearscreen = "2.0"
colored = "2.0"
directories = "5.0"
im = "15.1"
regex = "1.8"
rustyline = "11.0.0"
